# schieferwurf19

./: Button.h  CMakeLists.txt  Circle.h  GUI.h  In_Box.h  Line.h  Out_Box.h  Point.h  README.md  Shape.h  Slider.h  Source.cpp  Text.h  Widget.h  Windows.h  callback1.h  callback2.h  compile.txt  test
präsentation/: InfoPräsentation.tex
